org.mmisw.ontmd: MMI Portal
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2008-08-10  1.5.0.alpha7   Issue #159: Re-host ontologies: versioning
	- OntologyTable.update(): include version in hyperlinks
	- PortalControl.getDownloadOptionHtml(): include "version" parameter
	
	
	- log4j.xml: assigned same org.mmisw.ontmd's log level to org.mmisw.iserver module.
	
	
2009-08-05  1.5.0.alpha6
	- Fixed issue #160 Loading an ontology file does not update associated metadata in the editor
		Problem was that the listener registered with the DataPanel was not updated when the mode
		changed from view-only to edit-new-version, so the wrong, obsolete object was notified
		of the load. Now, the listener is retrieved from the PortalControl instance.

2009-08-05  1.5.0.alpha5
	- PortalMainPanel.dispatchMainPanel:  Once a registration was completed, the intended behavior 
	  is to return to the "browse" list. This was not working, but it's now fixed: 
	  History.newItem("browse") is called to synchronize the state with the history.
	  
	- PortalMainPanel & OntologyTable: historyTokenMap is now not actually updated, so the
	  RegisteredOntologyInfo objects are not cached. This simplifies things.
	  TODO: either remove the cache (historyTokenMap) variable or decide how to maintain it.
	
	
1.5.0.alpha4 (change in iserver library)
	- Server.createOntology(CreateOntologyInfo): Do NOT remove "original OWL.Ontology individual"
	  if we are in re-hosting mode (createOntologyResult.isPreserveOriginalBaseNamespace).
	  If we did this on a model with the same original namespace, we would remove the owl:Ontology 
	  entry altogether and get an "rdf:Description" instead.
	  
	  
2009-08-01,03:  1.5.0.alpha3 (was 1.5.0.alpha2)
	- Added build and configuration params to allow deployment of the service on any machine (while
	  removing several related hard-coded pieces, in particular about http://mmisw.org...):
		appserver.host
		ont.service.url
		portal.service.url
		vine.service.url