@@ -10,6 +10,13 @@ ChangeLog
 	
 	- log4j.xml: assigned same org.mmisw.ontmd's log level to org.mmisw.iserver module.
 	
+	Various adjustments in UI
+		- browse table now with cell padding 3
+		- HeaderPanel aligned to the left (so it doesn't get hidden when the contents of the
+		  ontology become too wide)
+		- "Versions" button re-enabled after fix in iserver (includes all version for each requested 
+		  ontology).
+	
 	
 2009-08-05  1.5.0.alpha6
 	- Fixed issue #160 Loading an ontology file does not update associated metadata in the editor
